<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:id="@+id/details_neighbours"

    >


    <RelativeLayout

        android:id="@+id/Relative_image_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >

        <ImageView
            android:id="@+id/neighbours_image_profile"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:scaleType="fitXY"

            />

        <TextView
            android:id="@+id/neighbours_name_Profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="170dp"
            android:text="Nom"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_keyboard_backspace_black_24dp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout_info"
        android:layout_width="376dp"
        android:layout_height="158dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="245dp"
        android:background="@drawable/relativelayout"
        android:orientation="vertical"
        android:padding="10dp"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/neighbours_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="Nom"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/linearLayout_adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="35dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/text_margin"
                android:src="@drawable/ic_location_on_black_24dp" />

            <TextView
                android:id="@+id/user_adresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="81dp"
                android:text="Adresse"
                android:textSize="@dimen/text_size_info"
                android:textStyle="italic" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="70dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/text_margin"
                android:src="@drawable/ic_phone_black_24dp" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="Telephone"
                android:textSize="@dimen/text_size_info"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/text_margin"
                android:src="@drawable/ic_language" />

            <TextView
                android:id="@+id/user_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/linearLayout_mail"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="Email"
                android:textSize="@dimen/text_size_info"
                android:textStyle="italic" />
        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout_Apropos"
        android:layout_width="378dp"
        android:layout_height="179dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_marginTop="400dp"
        android:background="@drawable/relativelayout"
        android:padding="10dp"

        >

        <LinearLayout
            android:id="@+id/linearApropos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/linearApropos"
                android:layout_alignTop="@+id/linearApropos"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="A propos de moi "
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearApropos">

            <TextView
                android:id="@+id/user_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="mon text"
                android:textSize="@dimen/text_size_info"
                android:textStyle="italic" />

        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/button_favorites"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="188dp"
        android:layout_marginLeft="340dp"
        android:background="@drawable/button_custom"
        android:padding="6dp"
        android:src="@drawable/ic_star_border_white_24dp" />


</RelativeLayout>